feat(02-02): tighten RBAC to least privilege with conditional Leases
- ConfigMaps/Secrets reduced to read-only (get, list, watch)
- Jobs reduced to immutable pattern (get, list, watch, create, delete)
- Services reduced to create/delete lifecycle (no update/patch)
- Leases conditional on leaderElection.enabled flag
- Leases verbs reduced (removed delete, kept get/list/watch/create/update/patch)
- Updated header comments to reflect read-only and immutable patterns

--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -8,12 +8,12 @@ The operator needs permissions to:
   1. Manage LocustTest CRs (create, update, delete, watch)
   2. Update status subresource (report test status back to CR)
   3. Manage finalizers (cleanup resources when CR is deleted)
-  4. Create/manage Jobs (master and worker pods)
-  5. Create/manage Services (master service for worker communication)
-  6. Create/manage ConfigMaps (test files, library files)
+  4. Create/delete Jobs using immutable pattern (master and worker pods)
+  5. Create/delete Services (master service for worker communication)
+  6. Read ConfigMaps (test files, library files)
   7. Read Secrets (for env injection, Kafka credentials)
   8. Create Events (for status reporting)
-  9. Manage Leases (for leader election in HA mode)
+  9. Manage Leases (for leader election in HA mode, conditional)
 
 ClusterRole vs Role:
   - ClusterRole (k8s.clusterRole.enabled=true): Operator can manage tests in ALL namespaces
@@ -85,12 +85,18 @@ rules:
   # -----------------------------------------------------------------------
   # Core Kubernetes resources
   # -----------------------------------------------------------------------
-  # ConfigMaps - store test files and library code
-  # Secrets - read credentials for env injection
-  # Services - expose master pod to workers
+  # ConfigMaps - read user-provided test files and library code
   - apiGroups: [""]
-    resources: ["configmaps", "secrets", "services"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    resources: ["configmaps"]
+    verbs: ["get", "list", "watch"]
+  # Secrets - read credentials for env injection (never modified by operator)
+  - apiGroups: [""]
+    resources: ["secrets"]
+    verbs: ["get", "list", "watch"]
+  # Services - master service for worker communication (create/delete lifecycle)
+  - apiGroups: [""]
+    resources: ["services"]
+    verbs: ["get", "list", "watch", "create", "delete"]
   # Events - report status changes and errors
   - apiGroups: [""]
     resources: ["events"]
@@ -99,18 +105,20 @@ rules:
   # -----------------------------------------------------------------------
   # Batch resources
   # -----------------------------------------------------------------------
-  # Jobs - master and worker pods run as Jobs
+  # Jobs - immutable create/delete pattern (master and worker pods)
   - apiGroups: ["batch"]
     resources: ["jobs"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    verbs: ["get", "list", "watch", "create", "delete"]
 
   # -----------------------------------------------------------------------
   # Coordination resources
   # -----------------------------------------------------------------------
-  # Leases - used for leader election in HA deployments
+  {{- if .Values.leaderElection.enabled }}
+  # Leases - leader election coordination (only when HA enabled)
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+  {{- end }}
 ---
 
 # =============================================================================
