feat(02-03): add optional PodDisruptionBudget and remove no-op crd.install
- Add PDB template (disabled by default per user decision)
- Add podDisruptionBudget config section to values.yaml
- Remove crd.install no-op value (Helm crds/ always installs unconditionally)
- PDB supports HA deployments with replicaCount >= 2

--- a/charts/locust-k8s-operator/values.yaml
+++ b/charts/locust-k8s-operator/values.yaml
@@ -25,6 +25,11 @@ replicaCount: 1
 leaderElection:
   enabled: true
 
+# -- PodDisruptionBudget for HA deployments (requires replicaCount >= 2)
+podDisruptionBudget:
+  enabled: false
+  maxUnavailable: 1
+
 # -- Metrics endpoint (Prometheus)
 metrics:
   enabled: false  # Disabled by default, enable if scraping
@@ -37,10 +42,6 @@ webhook:
   port: 9443
   certManager:
     enabled: true  # Use cert-manager for TLS
-
-# -- CRD installation
-crd:
-  install: true
 
 # =============================================================================
 # Locust Test Pod Configuration (what the operator creates)
