--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
   build-go:
     name: 🏗️ Build Go Operator
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     defaults:
       run:
         working-directory: locust-k8s-operator-go
@@ -65,8 +66,7 @@ jobs:
   lint-test-helm:
     name: 🌊 Lint & Test chart
     runs-on: ubuntu-latest
-    needs:
-      - build-go
+    timeout-minutes: 30
     steps:
       - name: 📂 Checkout
         uses: actions/checkout@v4
@@ -135,8 +135,7 @@ jobs:
   docs-test:
     name: 📚 Test documentation
     runs-on: ubuntu-latest
-    needs:
-      - lint-test-helm
+    timeout-minutes: 15
     steps:
       - name: 📂 Checkout
         uses: actions/checkout@v4
