feat(06-04): add Helm chart metadata, schema validation, and NOTES.txt
- Add Chart.yaml metadata: kubeVersion, home, sources, maintainers
- Add fullnameOverride and nameOverride support in values and _helpers.tpl
- Add extraEnv support for custom operator environment variables
- Add terminationGracePeriodSeconds configuration
- Add configurable podSecurityContext and containerSecurityContext
- Add health_check extension to OTel Collector config
- Create values.schema.json for Helm value validation
- Create NOTES.txt with post-install instructions and examples

--- a/charts/locust-k8s-operator/Chart.yaml
+++ b/charts/locust-k8s-operator/Chart.yaml
@@ -23,6 +23,14 @@ version: 2.0.0
 # It is recommended to use it with quotes.
 appVersion: "2.0.0"
 
+kubeVersion: ">= 1.25.0-0"
+home: https://github.com/AbdelrhmanHamouda/locust-k8s-operator
+sources:
+  - https://github.com/AbdelrhmanHamouda/locust-k8s-operator
+maintainers:
+  - name: AbdelrhmanHamouda
+    url: https://github.com/AbdelrhmanHamouda
+
 annotations:
   artifacthub.io/changes: |
     - kind: changed
