test(06-01): add comprehensive status transition tests and fix Phase type in tests
- Add TestUpdateStatusFromJobs_FullStateMachine covering all phase transitions
- Add TestUpdateStatusFromJobs_PhaseTransitionEvents verifying event emission
- Add TestUpdateStatusFromJobs_NoEventOnSamePhase for idempotency verification
- Add TestUpdateStatusFromJobs_ObservedGeneration verifying generation tracking
- Add TestDerivePhaseFromJob_TypeSafety verifying typed Phase return
- Add TestUpdateStatusFromJobs_WorkersConnectedCondition for worker tracking
- Fix existing tests to use typed Phase (string conversion for comparisons)
- Update CRD manifests for ObservedGeneration field

--- a/charts/locust-k8s-operator/crds/locust.io_locusttests.yaml
+++ b/charts/locust-k8s-operator/crds/locust.io_locusttests.yaml
@@ -3606,13 +3606,22 @@ spec:
                 - type
                 x-kubernetes-list-type: map
               connectedWorkers:
-                description: ConnectedWorkers is the current number of connected workers.
+                description: |-
+                  ConnectedWorkers is the approximate number of connected workers,
+                  derived from the worker Job's Active pod count (Job.Status.Active).
+                  This is an approximation as Kubernetes Job.Status.Active may lag behind
+                  actual Locust worker connections.
                 format: int32
                 type: integer
               expectedWorkers:
                 description: ExpectedWorkers is the number of workers expected to
                   connect.
                 format: int32
+                type: integer
+              observedGeneration:
+                description: ObservedGeneration is the most recent generation observed
+                  by the controller.
+                format: int64
                 type: integer
               phase:
                 description: Phase is the current lifecycle phase of the test.
