feat(06-03): add gosec, errorlint, exhaustive linters and wrap reconciler errors
- Add gosec, errorlint, exhaustive linters to .golangci.yml
- Configure errorlint with all checks enabled
- Configure exhaustive with strict mode (default-signifies-exhaustive: false)
- Add error wrapping with %w to all reconciler error returns
- Add PhasePending case to switch statement (exhaustive requirement)
- Fix gofmt formatting in config.go
- Add justified nolint:gosec directives for test code with known safe inputs

--- a/locust-k8s-operator-go/.golangci.yml
+++ b/locust-k8s-operator-go/.golangci.yml
@@ -7,9 +7,12 @@ linters:
     - copyloopvar
     - dupl
     - errcheck
+    - errorlint
+    - exhaustive
     - ginkgolinter
     - goconst
     - gocyclo
+    - gosec
     - govet
     - ineffassign
     - lll
@@ -22,6 +25,15 @@ linters:
     - unparam
     - unused
   settings:
+    errorlint:
+      errorf: true
+      errorf-multi: true
+      asserts: true
+      comparison: true
+    exhaustive:
+      check:
+        - switch
+      default-signifies-exhaustive: false
     revive:
       rules:
         - name: comment-spacings
