chore(06-05): update project metadata, dockerfile, build files, and RBAC
- Update PROJECT file to track v2 API (CORE-21)
- Pin Dockerfile golang version to 1.24.0 (CORE-23)
- Add comprehensive .dockerignore for build optimization (CORE-18)
- Add cover.out, coverage.out, venv/ to .gitignore (CORE-20)
- Remove create/delete verbs from locusttests RBAC (CORE-28)
- Remove finalizers permission from RBAC (CORE-29)
- Update kubebuilder RBAC markers in controller
- Add map ordering comment to buildNodeSelector (CORE-15)

--- a/locust-k8s-operator-go/.dockerignore
+++ b/locust-k8s-operator-go/.dockerignore
@@ -1,3 +1,34 @@
 # More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
-# Ignore build and test binaries.
+
+# Test files
+test/
+*_test.go
+
+# Documentation
+docs/
+*.md
+LICENSE
+
+# Git
+.git/
+.gitignore
+
+# IDE
+.idea/
+.vscode/
+
+# CI
+.github/
+.golangci.yml
+
+# Build artifacts
 bin/
+cover.out
+coverage.out
+
+# Planning
+.planning/
+
+# Python
+venv/
+__pycache__/
