chore(07-03): update CI/CD workflows, Makefile, PROJECT, and gitignore for root-level structure
- Remove working-directory from build-go job in ci.yaml
- Update go-version-file paths from locust-k8s-operator-go/go.mod to go.mod
- Remove working-directory from golangci-lint and ko build steps
- Update artifact paths to reference root-level cover.out
- Update E2E workflow path filters to trigger on root-level Go directories
- Change Makefile IMAGE_TAG_BASE to io/locust-k8s-operator (remove -go)
- Change Makefile KIND_CLUSTER to locust-k8s-operator-test-e2e
- Update buildx builder name to locust-k8s-operator-builder
- Change PROJECT projectName to locust-k8s-operator
- Replace root .gitignore with merged Go and project entries

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,9 +21,6 @@ jobs:
     name: 🏗️ Build Go Operator
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    defaults:
-      run:
-        working-directory: locust-k8s-operator-go
     steps:
       - name: 📂 Checkout repo
         uses: actions/checkout@v4
@@ -34,7 +31,7 @@ jobs:
       - name: 🔧 Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: locust-k8s-operator-go/go.mod
+          go-version-file: go.mod
 
       - name: 📥 Download dependencies
         run: go mod download
@@ -43,7 +40,6 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1.0
-          working-directory: locust-k8s-operator-go
 
       - name: 🛠️ Build
         run: make build
@@ -55,7 +51,7 @@ jobs:
         if: always()
         uses: codecov/codecov-action@v5
         with:
-          files: locust-k8s-operator-go/cover.out
+          files: cover.out
           flags: go-unit-tests
           name: go-coverage
           fail_ci_if_error: false
@@ -66,7 +62,7 @@ jobs:
         with:
           name: go-test-artifacts
           path: |
-            locust-k8s-operator-go/cover.out
+            cover.out
           retention-days: 7
 
   # ============================================
@@ -117,7 +113,7 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         uses: actions/setup-go@v5
         with:
-          go-version-file: locust-k8s-operator-go/go.mod
+          go-version-file: go.mod
 
       - name: 🛠️ Install ko
         if: steps.list-changed.outputs.changed == 'true'
@@ -125,11 +121,10 @@ jobs:
 
       - name: 🐳 Build operator image with ko
         if: steps.list-changed.outputs.changed == 'true'
-        working-directory: locust-k8s-operator-go
         env:
           KO_DOCKER_REPO: lotest/locust-k8s-operator
         run: |
-          CHART_VERSION=$(grep '^appVersion:' ../charts/locust-k8s-operator/Chart.yaml | awk '{print $2}' | tr -d '"')
+          CHART_VERSION=$(grep '^appVersion:' charts/locust-k8s-operator/Chart.yaml | awk '{print $2}' | tr -d '"')
           ko build ./cmd --local --bare --tags=${CHART_VERSION}
 
       - name: 📦 Load image into kind cluster
