--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: 🔧 Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: locust-k8s-operator-go/go.mod
+          go-version-file: go.mod
 
       - name: 🔧 Setup ko
         uses: ko-build/setup-ko@v0.7
@@ -38,7 +38,6 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: 📦 Build and push with ko
-        working-directory: locust-k8s-operator-go
         env:
           KO_DOCKER_REPO: ${{ env.DOCKER_IMAGE }}
         run: |
