chore(07-03): update all config manifests and E2E tests to use locust-k8s-operator
- Change namespace from locust-k8s-operator-go-system to locust-k8s-operator-system
- Update namePrefix in config/default/kustomization.yaml
- Update all resource names, labels, and references across config/ manifests
- Update E2E test constants: namespace, serviceAccountName, metricsServiceName
- Update projectImage reference in e2e_suite_test.go
- Update clusterrole name in metrics test
- Change CSV filename reference in config/manifests/kustomization.yaml
- All config and test files now use standard locust-k8s-operator naming

--- a/config/rbac/locusttest_viewer_role.yaml
+++ b/config/rbac/locusttest_viewer_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project locust-k8s-operator-go itself.
+# This rule is not used by the project locust-k8s-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants read-only access to locust.io resources.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: locust-k8s-operator-go
+    app.kubernetes.io/name: locust-k8s-operator
     app.kubernetes.io/managed-by: kustomize
   name: locusttest-viewer-role
 rules:
