--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -20,7 +20,7 @@ resources:
 - metrics_reader_role.yaml
 # For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
 # default, aiding admins in cluster management. Those roles are
-# not used by the locust-k8s-operator-go itself. You can comment the following lines
+# not used by the locust-k8s-operator itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
 - locusttest_admin_role.yaml
 - locusttest_editor_role.yaml
