--- a/config/rbac/locusttest_editor_role.yaml
+++ b/config/rbac/locusttest_editor_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project locust-k8s-operator-go itself.
+# This rule is not used by the project locust-k8s-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants permissions to create, update, and delete resources within the locust.io.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: locust-k8s-operator-go
+    app.kubernetes.io/name: locust-k8s-operator
     app.kubernetes.io/managed-by: kustomize
   name: locusttest-editor-role
 rules:
