--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,6 +48,9 @@ linters:
           - dupl
           - lll
         path: internal/*
+      - linters:
+          - goconst
+        path: _test\.go
     paths:
       - third_party$
       - builtin$
