chore: standardize lib volume name and improve status/flag handling
- Rename lib volume from "lib" to "locust-lib" for clarity
- Add cluster_name to E2E workflow Kind cluster creation
- Fix StartTime to only set on first creation (preserve across reconciles)
- Add Ready=false status when test fails
- Add WorkersConnected=false condition when workers missing
- Fix flag conflict detection to match exact flags (not just prefixes)
- Update all tests to reflect locust-lib volume name

--- a/.github/workflows/go-test-e2e.yml
+++ b/.github/workflows/go-test-e2e.yml
@@ -40,6 +40,7 @@ jobs:
       - name: ☸️ Create Kind cluster
         uses: helm/kind-action@v1.12.0
         with:
+          cluster_name: locust-k8s-operator-test-e2e
           wait: 120s
 
       - name: 🔍 Verify go mod tidy
