fix(08-01): update NOTES.txt to v2 API and fix sample CR command format
- Replace v1alpha1 example in NOTES.txt with valid v2 example
- Remove non-existent fields (masterCommand, workerCommand, workers)
- Fix command format in all v2 sample CRs (remove 'locust' prefix)
- Add port-forward instructions for web UI access to NOTES.txt

--- a/config/samples/locust_v2_locusttest.yaml
+++ b/config/samples/locust_v2_locusttest.yaml
@@ -8,7 +8,7 @@ spec:
   imagePullPolicy: IfNotPresent
   
   master:
-    command: "locust -f /lotest/src/locustfile.py"
+    command: "--locustfile /lotest/src/locustfile.py"
     autostart: true
     autoquit:
       enabled: true
@@ -22,9 +22,9 @@ spec:
       limits:
         cpu: "1000m"
         memory: "1Gi"
-  
+
   worker:
-    command: "locust -f /lotest/src/locustfile.py"
+    command: "--locustfile /lotest/src/locustfile.py"
     replicas: 5
     labels:
       role: worker
