feat(10-02): sync RBAC permissions between kustomize and Helm
- Added configmaps and secrets read permissions to kustomize role.yaml
- Removed unused finalizers permissions from Helm (operator doesn't use finalizers)
- Removed create/delete verbs for locusttests in Helm (only users create CRs)
- Updated Helm RBAC header comment to reflect accurate permissions
- Both deployment methods now have identical RBAC rules

--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -5,15 +5,14 @@ RBAC CONFIGURATION FOR LOCUST K8S OPERATOR
 This template creates the ServiceAccount and RBAC rules needed by the operator.
 
 The operator needs permissions to:
-  1. Manage LocustTest CRs (create, update, delete, watch)
+  1. Watch and update LocustTest CRs (but not create/delete - users create CRs)
   2. Update status subresource (report test status back to CR)
-  3. Manage finalizers (cleanup resources when CR is deleted)
-  4. Create/delete Jobs using immutable pattern (master and worker pods)
-  5. Create/delete Services (master service for worker communication)
-  6. Read ConfigMaps (test files, library files)
-  7. Read Secrets (for env injection, Kafka credentials)
-  8. Create Events (for status reporting)
-  9. Manage Leases (for leader election in HA mode, conditional)
+  3. Create/delete Jobs using immutable pattern (master and worker pods)
+  4. Create/delete Services (master service for worker communication)
+  5. Read ConfigMaps (test files, library files)
+  6. Read Secrets (for env injection, Kafka credentials)
+  7. Create Events (for status reporting)
+  8. Manage Leases (for leader election in HA mode, conditional)
 
 ClusterRole vs Role:
   - ClusterRole (k8s.clusterRole.enabled=true): Operator can manage tests in ALL namespaces
@@ -72,15 +71,11 @@ rules:
   # Main CR - operator watches these and reconciles state
   - apiGroups: ["locust.io"]
     resources: ["locusttests"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    verbs: ["get", "list", "watch", "update", "patch"]
   # Status subresource - operator reports test status here
   - apiGroups: ["locust.io"]
     resources: ["locusttests/status"]
     verbs: ["get", "update", "patch"]
-  # Finalizers - ensure cleanup happens before CR deletion
-  - apiGroups: ["locust.io"]
-    resources: ["locusttests/finalizers"]
-    verbs: ["update"]
 
   # -----------------------------------------------------------------------
   # Core Kubernetes resources
