chore: improve Dockerfile build, Helm chart UX, and add logging utilities
- Change Dockerfile to copy entire cmd/ directory instead of single main.go file
- Update go build command to use ./cmd/ package path for better compatibility
- Add chart icon URL to Chart.yaml for Helm repository display
- Simplify NOTES.txt with concise emoji-based formatting (115 lines → 35 lines)
- Set fullnameOverride default to "locust-operator" for predictable resource names
- Add finalizers subresource permissions

--- a/charts/locust-k8s-operator/Chart.yaml
+++ b/charts/locust-k8s-operator/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v2
 name: locust-k8s-operator
 description: Locust Kubernetes Operator - Go v2
+icon: https://raw.githubusercontent.com/AbdelrhmanHamouda/locust-k8s-operator/master/docs/assets/images/favicon.png
 
 # A chart can be either an 'application' or a 'library' chart.
 #
