--- a/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
+++ b/charts/locust-k8s-operator/templates/serviceaccount-and-roles.yaml
@@ -76,6 +76,10 @@ rules:
   - apiGroups: ["locust.io"]
     resources: ["locusttests/status"]
     verbs: ["get", "update", "patch"]
+  # Finalizers subresource - operator adds/removes finalizer for deletion visibility
+  - apiGroups: ["locust.io"]
+    resources: ["locusttests/finalizers"]
+    verbs: ["update"]
 
   # -----------------------------------------------------------------------
   # Core Kubernetes resources
