fix(10-04): add webhook cert polling and mark secret optional in Helm
- Add polling loop in main.go to wait for cert-manager to issue webhook certificates
- Poll cert/key files every 1s until both exist before starting certwatcher
- Mark webhook-certs secret as optional: true in Helm deployment
- Prevents operator crash when webhook enabled but certs not yet issued
- Fixes race condition during initial deployment with cert-manager

--- a/charts/locust-k8s-operator/templates/deployment.yaml
+++ b/charts/locust-k8s-operator/templates/deployment.yaml
@@ -139,6 +139,7 @@ spec:
         - name: webhook-certs
           secret:
             secretName: {{ include "locust-k8s-operator.fullname" . }}-webhook-certs
+            optional: true
       {{- end }}
       # Node scheduling constraints
       {{- with .Values.nodeSelector }}
