fix: resolve CI pipeline failures for linter and go mod checks
Remove unused functions causing golangci-lint failures and fix go.mod dependency classification to pass E2E tests.

Changes:
- Remove unused categorizePodFailures function and sort import from pod_health.go
- Remove unused boolPtr function from job.go
- Move go.uber.org/zap from indirect to direct dependencies in go.mod
- Update generated webhook patch with metrics port configuration

Fixes linter errors and go mod tidy check in CI pipeline.

--- a/config/default/manager_webhook_patch.yaml
+++ b/config/default/manager_webhook_patch.yaml
@@ -14,6 +14,9 @@ spec:
         - --metrics-bind-address=:8443
         - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
         ports:
+        - containerPort: 8443
+          name: metrics
+          protocol: TCP
         - containerPort: 9443
           name: webhook-server
           protocol: TCP
