docs(14-02): add FAQ and Security to MkDocs navigation
- Added Security entry after Metrics & Dashboards (operations area)
- Added FAQ entry after API Reference (user reference area)
- Preserved mermaid config from Plan 14-01
- Navigation structure remains valid

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -189,7 +189,9 @@ nav:
   - Deploy Operator with HELM: helm_deploy.md
   - Advanced topics: advanced_topics.md
   - Metrics & Dashboards: metrics_and_dashboards.md
+  - Security: security.md
   - API Reference: api_reference.md
+  - FAQ: faq.md
   - Migration Guide: migration.md
   - Contributing & Development:
       - Overview: contribute.md
